# pico-fmSynth

./: .gitignore  CMakeLists.txt  README.md  fmSynth_picoI2sAudioDriver.cpp  fmSynth_picoI2sAudioDriver.h  main.cpp  pico-fmSynth.cpp  pico-i2sExample.c  sampleMidi.c  sampleMidi.h
audio_i2s/: audio_i2s.c  audio_i2s.h  picoI2sAudio.h
driver/: fmSynth_picoI2sAudioDriver.h
fmSynth/: FpF.hpp  FpS.hpp  algorithm.cpp  algorithm.h  envelope.cpp  envelope.h  fmChannel.cpp  fmChannel.h  fmPatchTuner.cpp  fmPatchTuner.h  fmSynth.cpp  fmSynth.h  fmSynth_main.h  miditones.cpp  miditones.h  oscillator.cpp  oscillator.h  patch.cpp  patch.h  smallMidiParser.cpp  smallMidiParser.h
miditones/: midiFreqTable.c  midiFreqTable.h  miditones.cpp  miditones.h
miditonesFile/: sampleMidi.c  sampleMidi.h
